# rust-chat_client

./: Cargo.toml  README.md
src/: app.rs  init.rs  lib.rs  main.rs  model.rs  pa.rs  req.rs  ui.rs  util.rs
src/app/: cfg.rs  msg_fetching.rs  msg_posting.rs
src/model/: chat_msg.rs  get_msgs.rs  post_msg.rs
src/pa/: read.rs  write.rs
src/req/: ctxfull.rs  get_msgs.rs  post_msg.rs
src/req/post_msg/: factory.rs
src/ui/: cli.rs
