[package]
name = "chat_client"
description = "A `chat_client` for the `chat-server`."
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
component = "0.1.1"
derive_more = "0.99.18"
fs-err = "2.11.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
